added div, h1, p, and button tags in the main tag of the HTML; entered the intro to the quiz in the tags in the HTML and styled the button in CSS.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,22 @@
     <title>Quiz Time!</title>
 </head>
 <body>
-    
+    <header>
+        <div id="test-info">
+            <p id="view">View Highscores</p>
+            <p id="time-left">Time: <scan></scan></p>
+        </div>
+    </header>
+
+    <main>
+        <div id="quiz-cards">
+            <h1>Coding Quiz Challenge</h1>
+            <p>
+                Try to master the following code related questions within the time limit. Keep in mind that incorrect answers will penalize your scoretime by ten seconds!
+            </p>
+            <button id="start-quiz">Start Quiz</button>
+        </div>
+    </main>
 
     <script type="text/javascript" src="./assets/js/script.js"></script>
 </body>
