created 3 variables in JS for the button to start the quiz, the starting time for the timer, and where the time gets put into the HTML when the button is clicked; created a questions array with 6 questions, all of which have 4 possible answers: 3 wrong and 1 correct; and begun the beginQuiz function with an interval for the timer.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div id="test-info">
             <p id="view">View Highscores</p>
-            <p id="time-left">Time: <scan></scan></p>
+            <p id="time-left">Time: <scan id="countDown"></scan></p>
         </div>
     </header>
 
