called the generateQuestions function in the beginning of the beginQuiz function; added the 1000ms count for the timer that I had forgotten; in the generateQuestions function I had it remove the h1 and the button in order to allow the creation of new elements in the HTML and I replaced the paragraph text to the random question that was selected with Math.random; created a for loop to generate the 4 buttons for the multiple choices to the question; added an event listener for the multiple choices in the question.

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <header>
         <div id="test-info">
             <p id="view">View Highscores</p>
-            <p id="time-left">Time: <scan id="countDown"></scan></p>
+            <p id="time-left">Time: <span id="countDown"></span></p>
         </div>
     </header>
 
     <main>
         <div id="quiz-cards">
             <h1>Coding Quiz Challenge</h1>
-            <p>
+            <p id="main">
                 Try to master the following code related questions within the time limit. Keep in mind that incorrect answers will penalize your scoretime by ten seconds!
             </p>
             <button id="start-quiz">Start Quiz</button>
