created a if/else statement in generate question function to stop the quiz and call the test over function; added splice to questions to ensure that same question would not be called upon again; created test over function to allow the user to input their initials and submit their score; created log score function so their score is logged on their local storage and they can see their score; two buttons added to log score function where they can go back or clear the highscores; included button for view highscore in the header and the highscores function to show the scores on the local storage; going to keep working on this as I do not believe I really need to do this because it is not shown on the README for the homework assignment.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div id="test-info">
-            <p id="view">View Highscores</p>
+            <p id="view"><button onclick="highscores()">View Highscores</button></p>
             <p id="time-left">Time: <span id="countDown"></span></p>
         </div>
     </header>
