--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 <body>
     <header>
         <div id="test-info">
-            <p id="view"><button onclick="highscores()">View Highscores</button></p>
+            <p id="view">View Highscores</p>
             <p id="time-left">Time: <span id="countDown"></span></p>
         </div>
     </header>
 
     <main>
         <div id="quiz-cards">
-            <h1>Coding Quiz Challenge</h1>
-            <p id="main">
-                Try to master the following code related questions within the time limit. Keep in mind that incorrect answers will penalize your scoretime by ten seconds!
-            </p>
-            <button id="start-quiz">Start Quiz</button>
+                <h1>Coding Quiz Challenge</h1>
+                <p id="main">
+                    Try to master the following code related questions within the time limit. Keep in mind that incorrect answers will penalize your scoretime by ten seconds!
+                </p>
+                <button id="start-quiz" onclick=beginQuiz()>Start Quiz</button>
         </div>
     </main>
 
